--- a/standard_namespace/Makefile.in
+++ b/standard_namespace/Makefile.in
@@ -307,7 +307,7 @@ addonsincludedir = $(uaserverincludedir)/addons
 configdir = $(sysconfdir)/opcua
 serverconfigdir = $(configdir)/server
 COMMON_INCLUDES = \
-  -Iinclude \
+  -I$(top_srcdir)/standard_namespace/include \
   -I$(top_srcdir)/address_space/include \
   -I$(top_srcdir)/services_registry/include \
   $(UAMAPPINGS_INCLUDES) $(OPC_CORE_INCLUDES)
