--- a/binary_protocol/Makefile.in
+++ b/binary_protocol/Makefile.in
@@ -127,6 +127,7 @@ am_test_opcua_protocol_addon_OBJECTS =  \
 	test_opcua_protocol_addon-builtin_server_impl.$(OBJEXT) \
 	test_opcua_protocol_addon-endpoints_parameters.$(OBJEXT) \
 	test_opcua_protocol_addon-endpoints_services_addon.$(OBJEXT) \
+	test_opcua_protocol_addon-endpoints_registry.$(OBJEXT) \
 	test_opcua_protocol_addon-services_registry_factory.$(OBJEXT) \
 	test_opcua_protocol_addon-services_registry_impl.$(OBJEXT) \
 	test_opcua_protocol_addon-standard_namespace_addon.$(OBJEXT) \
@@ -356,8 +357,7 @@ test_opcua_protocol_addon_SOURCES = \
   ../builtin_server/src/builtin_server_impl.h \
   ../endpoint_services/src/endpoints_parameters.cpp \
   ../endpoint_services/src/endpoints_services_addon.cpp \
-  ../endpoint_services/src/endpoints_services_addon.h \
-  ../endpoint_services/src/endpoints_services_factory.h \
+  ../endpoint_services/src/endpoints_registry.cpp \
   ../services_registry/src/services_registry_factory.cpp \
   ../services_registry/src/services_registry_factory.h \
   ../services_registry/src/services_registry_impl.cpp \
@@ -463,6 +463,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/test_opcua_protocol_addon-builtin_server_factory.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/test_opcua_protocol_addon-builtin_server_impl.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/test_opcua_protocol_addon-endpoints_parameters.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/test_opcua_protocol_addon-endpoints_registry.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/test_opcua_protocol_addon-endpoints_services_addon.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/test_opcua_protocol_addon-opc_tcp_processor.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/test_opcua_protocol_addon-opcua_protocol_addon.Po@am__quote@
@@ -661,6 +662,20 @@ test_opcua_protocol_addon-endpoints_services_addon.obj: ../endpoint_services/src
 @AMDEP_TRUE@@am__fastdepCXX_FALSE@	source='../endpoint_services/src/endpoints_services_addon.cpp' object='test_opcua_protocol_addon-endpoints_services_addon.obj' libtool=no @AMDEPBACKSLASH@
 @AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
 @am__fastdepCXX_FALSE@	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(test_opcua_protocol_addon_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o test_opcua_protocol_addon-endpoints_services_addon.obj `if test -f '../endpoint_services/src/endpoints_services_addon.cpp'; then $(CYGPATH_W) '../endpoint_services/src/endpoints_services_addon.cpp'; else $(CYGPATH_W) '$(srcdir)/../endpoint_services/src/endpoints_services_addon.cpp'; fi`
+
+test_opcua_protocol_addon-endpoints_registry.o: ../endpoint_services/src/endpoints_registry.cpp
+@am__fastdepCXX_TRUE@	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(test_opcua_protocol_addon_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -MT test_opcua_protocol_addon-endpoints_registry.o -MD -MP -MF $(DEPDIR)/test_opcua_protocol_addon-endpoints_registry.Tpo -c -o test_opcua_protocol_addon-endpoints_registry.o `test -f '../endpoint_services/src/endpoints_registry.cpp' || echo '$(srcdir)/'`../endpoint_services/src/endpoints_registry.cpp
+@am__fastdepCXX_TRUE@	$(am__mv) $(DEPDIR)/test_opcua_protocol_addon-endpoints_registry.Tpo $(DEPDIR)/test_opcua_protocol_addon-endpoints_registry.Po
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	source='../endpoint_services/src/endpoints_registry.cpp' object='test_opcua_protocol_addon-endpoints_registry.o' libtool=no @AMDEPBACKSLASH@
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+@am__fastdepCXX_FALSE@	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(test_opcua_protocol_addon_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o test_opcua_protocol_addon-endpoints_registry.o `test -f '../endpoint_services/src/endpoints_registry.cpp' || echo '$(srcdir)/'`../endpoint_services/src/endpoints_registry.cpp
+
+test_opcua_protocol_addon-endpoints_registry.obj: ../endpoint_services/src/endpoints_registry.cpp
+@am__fastdepCXX_TRUE@	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(test_opcua_protocol_addon_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -MT test_opcua_protocol_addon-endpoints_registry.obj -MD -MP -MF $(DEPDIR)/test_opcua_protocol_addon-endpoints_registry.Tpo -c -o test_opcua_protocol_addon-endpoints_registry.obj `if test -f '../endpoint_services/src/endpoints_registry.cpp'; then $(CYGPATH_W) '../endpoint_services/src/endpoints_registry.cpp'; else $(CYGPATH_W) '$(srcdir)/../endpoint_services/src/endpoints_registry.cpp'; fi`
+@am__fastdepCXX_TRUE@	$(am__mv) $(DEPDIR)/test_opcua_protocol_addon-endpoints_registry.Tpo $(DEPDIR)/test_opcua_protocol_addon-endpoints_registry.Po
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	source='../endpoint_services/src/endpoints_registry.cpp' object='test_opcua_protocol_addon-endpoints_registry.obj' libtool=no @AMDEPBACKSLASH@
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+@am__fastdepCXX_FALSE@	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(test_opcua_protocol_addon_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o test_opcua_protocol_addon-endpoints_registry.obj `if test -f '../endpoint_services/src/endpoints_registry.cpp'; then $(CYGPATH_W) '../endpoint_services/src/endpoints_registry.cpp'; else $(CYGPATH_W) '$(srcdir)/../endpoint_services/src/endpoints_registry.cpp'; fi`
 
 test_opcua_protocol_addon-services_registry_factory.o: ../services_registry/src/services_registry_factory.cpp
 @am__fastdepCXX_TRUE@	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(test_opcua_protocol_addon_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -MT test_opcua_protocol_addon-services_registry_factory.o -MD -MP -MF $(DEPDIR)/test_opcua_protocol_addon-services_registry_factory.Tpo -c -o test_opcua_protocol_addon-services_registry_factory.o `test -f '../services_registry/src/services_registry_factory.cpp' || echo '$(srcdir)/'`../services_registry/src/services_registry_factory.cpp
