--- a/endpoint_services/Makefile.am
+++ b/endpoint_services/Makefile.am
@@ -26,15 +26,17 @@ TESTINCLUDES = $(GTEST_INCLUDES) $(GMOCK_INCLUDES)
 
 lib_LTLIBRARIES = libendpoints_services_addon.la
 
+uaserverinclude_HEADERS = \
+  include/opc/ua/server/endpoints_services.h
+
 addonsinclude_HEADERS = \
   include/opc/ua/server/addons/endpoints_services.h
 
 libendpoints_services_addon_la_SOURCES = \
   src/endpoints_parameters.cpp \
   src/endpoints_parameters.h \
+  src/endpoints_registry.cpp \
   src/endpoints_services_addon.cpp \
-  src/endpoints_services_addon.h \
-  src/endpoints_services_factory.h \
   src/endpoints_services_module.cpp
   
 libendpoints_services_addon_la_CPPFLAGS = $(COMMON_INCLUDES)
@@ -49,14 +51,11 @@ check_PROGRAMS = $(TESTS)
 test_endpoints_registry_SOURCES = \
   src/endpoints_parameters.cpp \
   src/endpoints_services_addon.cpp \
-  src/endpoints_services_addon.h \
-  src/endpoints_services_factory.h \
+  src/endpoints_registry.cpp \
   tests/endpoints_services_test.cpp \
   tests/endpoints_services_test.h \
   ../services_registry/src/services_registry_factory.cpp \
-  ../services_registry/src/services_registry_factory.h \
-  ../services_registry/src/services_registry_impl.cpp \
-  ../services_registry/src/services_registry_impl.h
+  ../services_registry/src/services_registry_impl.cpp
   
 test_endpoints_registry_CPPFLAGS = $(COMMON_INCLUDES) $(TESTINCLUDES)
 test_endpoints_registry_LDFLAGS = -lboost_thread -lpthread -ldl  $(UAMAPPINGS_LIBS) $(OPC_CORE_LIBS) $(GTEST_LIB) $(GTEST_MAIN_LIB) $(GMOCK_LIBS) -Wl,-z,defs,-no-undefined
