--- a/services_registry/Makefile.in
+++ b/services_registry/Makefile.in
@@ -64,7 +64,7 @@ build_triplet = @build@
 host_triplet = @host@
 subdir = services_registry
 DIST_COMMON = $(addonsinclude_HEADERS) $(srcdir)/Makefile.am \
-	$(srcdir)/Makefile.in
+	$(srcdir)/Makefile.in $(uaserverinclude_HEADERS)
 ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
 am__aclocal_m4_deps = $(top_srcdir)/configure.ac
 am__configure_deps = $(am__aclocal_m4_deps) $(CONFIGURE_DEPENDENCIES) \
@@ -101,7 +101,8 @@ am__uninstall_files_from_dir = { \
          $(am__cd) "$$dir" && rm -f $$files; }; \
   }
 am__installdirs = "$(DESTDIR)$(libdir)" \
-	"$(DESTDIR)$(addonsincludedir)"
+	"$(DESTDIR)$(addonsincludedir)" \
+	"$(DESTDIR)$(uaserverincludedir)"
 LTLIBRARIES = $(lib_LTLIBRARIES)
 libservices_registry_addon_la_LIBADD =
 am_libservices_registry_addon_la_OBJECTS =  \
@@ -127,15 +128,6 @@ CXXLD = $(CXX)
 CXXLINK = $(LIBTOOL) --tag=CXX $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) \
 	--mode=link $(CXXLD) $(AM_CXXFLAGS) $(CXXFLAGS) $(AM_LDFLAGS) \
 	$(LDFLAGS) -o $@
-COMPILE = $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) \
-	$(CPPFLAGS) $(AM_CFLAGS) $(CFLAGS)
-LTCOMPILE = $(LIBTOOL) --tag=CC $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) \
-	--mode=compile $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) \
-	$(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CFLAGS) $(CFLAGS)
-CCLD = $(CC)
-LINK = $(LIBTOOL) --tag=CC $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) \
-	--mode=link $(CCLD) $(AM_CFLAGS) $(CFLAGS) $(AM_LDFLAGS) \
-	$(LDFLAGS) -o $@
 SOURCES = $(libservices_registry_addon_la_SOURCES)
 DIST_SOURCES = $(libservices_registry_addon_la_SOURCES)
 am__can_run_installinfo = \
@@ -143,7 +135,7 @@ am__can_run_installinfo = \
     n|no|NO) false;; \
     *) (install-info --version) >/dev/null 2>&1;; \
   esac
-HEADERS = $(addonsinclude_HEADERS)
+HEADERS = $(addonsinclude_HEADERS) $(uaserverinclude_HEADERS)
 ETAGS = etags
 CTAGS = ctags
 DISTFILES = $(DIST_COMMON) $(DIST_SOURCES) $(TEXINFOS) $(EXTRA_DIST)
@@ -293,19 +285,20 @@ COMMON_INCLUDES = \
 
 TESTINCLUDES = $(GTEST_INCLUDES) $(GMOCK_INCLUDES)
 lib_LTLIBRARIES = libservices_registry_addon.la
+uaserverinclude_HEADERS = \
+  include/opc/ua/server/services_registry.h
+
 addonsinclude_HEADERS = \
   include/opc/ua/server/addons/services_registry.h
 
 libservices_registry_addon_la_SOURCES = \
   src/services_registry_factory.cpp \
-  src/services_registry_factory.h \
   src/services_registry_impl.cpp \
-  src/services_registry_impl.h \
-  src/services_registry_module.cpp \
-  tests/services_registry_test.h
+  src/services_registry_module.cpp
 
 libservices_registry_addon_la_CPPFLAGS = $(COMMON_INCLUDES)
 libservices_registry_addon_la_LDFLAGS = -lpthread -ldl  $(OPC_CORE_LIBS) $(UAMAPPINGS_LIBS) -no-undefined
+EXTRA_DIST = tests/services_registry_test.h
 all: all-am
 
 .SUFFIXES:
@@ -453,6 +446,27 @@ uninstall-addonsincludeHEADERS:
 	@list='$(addonsinclude_HEADERS)'; test -n "$(addonsincludedir)" || list=; \
 	files=`for p in $$list; do echo $$p; done | sed -e 's|^.*/||'`; \
 	dir='$(DESTDIR)$(addonsincludedir)'; $(am__uninstall_files_from_dir)
+install-uaserverincludeHEADERS: $(uaserverinclude_HEADERS)
+	@$(NORMAL_INSTALL)
+	@list='$(uaserverinclude_HEADERS)'; test -n "$(uaserverincludedir)" || list=; \
+	if test -n "$$list"; then \
+	  echo " $(MKDIR_P) '$(DESTDIR)$(uaserverincludedir)'"; \
+	  $(MKDIR_P) "$(DESTDIR)$(uaserverincludedir)" || exit 1; \
+	fi; \
+	for p in $$list; do \
+	  if test -f "$$p"; then d=; else d="$(srcdir)/"; fi; \
+	  echo "$$d$$p"; \
+	done | $(am__base_list) | \
+	while read files; do \
+	  echo " $(INSTALL_HEADER) $$files '$(DESTDIR)$(uaserverincludedir)'"; \
+	  $(INSTALL_HEADER) $$files "$(DESTDIR)$(uaserverincludedir)" || exit $$?; \
+	done
+
+uninstall-uaserverincludeHEADERS:
+	@$(NORMAL_UNINSTALL)
+	@list='$(uaserverinclude_HEADERS)'; test -n "$(uaserverincludedir)" || list=; \
+	files=`for p in $$list; do echo $$p; done | sed -e 's|^.*/||'`; \
+	dir='$(DESTDIR)$(uaserverincludedir)'; $(am__uninstall_files_from_dir)
 
 ID: $(HEADERS) $(SOURCES) $(LISP) $(TAGS_FILES)
 	list='$(SOURCES) $(HEADERS) $(LISP) $(TAGS_FILES)'; \
@@ -540,7 +554,7 @@ check-am: all-am
 check: check-am
 all-am: Makefile $(LTLIBRARIES) $(HEADERS)
 installdirs:
-	for dir in "$(DESTDIR)$(libdir)" "$(DESTDIR)$(addonsincludedir)"; do \
+	for dir in "$(DESTDIR)$(libdir)" "$(DESTDIR)$(addonsincludedir)" "$(DESTDIR)$(uaserverincludedir)"; do \
 	  test -z "$$dir" || $(MKDIR_P) "$$dir"; \
 	done
 install: install-am
@@ -596,7 +610,8 @@ info: info-am
 
 info-am:
 
-install-data-am: install-addonsincludeHEADERS
+install-data-am: install-addonsincludeHEADERS \
+	install-uaserverincludeHEADERS
 
 install-dvi: install-dvi-am
 
@@ -642,7 +657,8 @@ ps: ps-am
 
 ps-am:
 
-uninstall-am: uninstall-addonsincludeHEADERS uninstall-libLTLIBRARIES
+uninstall-am: uninstall-addonsincludeHEADERS uninstall-libLTLIBRARIES \
+	uninstall-uaserverincludeHEADERS
 
 .MAKE: install-am install-strip
 
@@ -655,11 +671,12 @@ uninstall-am: uninstall-addonsincludeHEADERS uninstall-libLTLIBRARIES
 	install-exec-am install-html install-html-am install-info \
 	install-info-am install-libLTLIBRARIES install-man install-pdf \
 	install-pdf-am install-ps install-ps-am install-strip \
-	installcheck installcheck-am installdirs maintainer-clean \
-	maintainer-clean-generic mostlyclean mostlyclean-compile \
-	mostlyclean-generic mostlyclean-libtool pdf pdf-am ps ps-am \
-	tags uninstall uninstall-addonsincludeHEADERS uninstall-am \
-	uninstall-libLTLIBRARIES
+	install-uaserverincludeHEADERS installcheck installcheck-am \
+	installdirs maintainer-clean maintainer-clean-generic \
+	mostlyclean mostlyclean-compile mostlyclean-generic \
+	mostlyclean-libtool pdf pdf-am ps ps-am tags uninstall \
+	uninstall-addonsincludeHEADERS uninstall-am \
+	uninstall-libLTLIBRARIES uninstall-uaserverincludeHEADERS
 
 
 #TESTS = test_services_registry
